#47 Gives profile images fixed height and crops to the centre if they are too wide

--- a/src/static/cesium/cesium.css
+++ b/src/static/cesium/cesium.css
@@ -396,6 +396,12 @@ tr.hidden {
 
 .lowerThirdsProfileImage {
     align-self: flex-end; /* safari */
+    height: 280px;
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: cover;
+    overflow: hidden;
 }
 
 .lowerThirdsTeamImage {
